@@ -663,7 +663,7 @@ AlgoliaSearch.prototype = {
     var usingFallback = false;
 
     if (opts.body !== undefined) {
-      body = JSON.stringify(opts.body);
+      body = safeJSONStringify(opts.body);
     }
 
     requestDebug('request start');
@@ -684,7 +684,7 @@ AlgoliaSearch.prototype = {
       // handle cache existence
       if (client._useCache && cache && cache[cacheID] !== undefined) {
         requestDebug('serving response from cache');
-        return client._promise.resolve(JSON.parse(JSON.stringify(cache[cacheID])));
+        return client._promise.resolve(JSON.parse(safeJSONStringify(cache[cacheID])));
       }
 
       // if we reached max tries
@@ -712,7 +712,7 @@ AlgoliaSearch.prototype = {
         reqOpts.url = opts.fallback.url;
         reqOpts.jsonBody = opts.fallback.body;
         if (reqOpts.jsonBody) {
-          reqOpts.body = JSON.stringify(reqOpts.jsonBody);
+          reqOpts.body = safeJSONStringify(reqOpts.jsonBody);
         }
 
         reqOpts.timeout = client.requestTimeout * (tries + 1);
@@ -893,7 +893,7 @@ AlgoliaSearch.prototype = {
     for (var key in args) {
       if (key !== null && args[key] !== undefined && args.hasOwnProperty(key)) {
         params += params === '' ? '' : '&';
-        params += key + '=' + encodeURIComponent(Object.prototype.toString.call(args[key]) === '[object Array]' ? JSON.stringify(args[key]) : args[key]);
+        params += key + '=' + encodeURIComponent(Object.prototype.toString.call(args[key]) === '[object Array]' ? safeJSONStringify(args[key]) : args[key]);
       }
     }
     return params;
@@ -2107,4 +2107,26 @@ function deprecate(fn, message) {
   }
 
   return deprecated;
+}
+
+// Prototype.js < 1.7, a widely used library, defines a weird
+// Array.prototype.toJSON function that will fail to stringify our content
+// appropriately
+// refs:
+//   - https://groups.google.com/forum/#!topic/prototype-core/E-SAVvV_V9Q
+//   - https://github.com/sstephenson/prototype/commit/038a2985a70593c1a86c230fadbdfe2e4898a48c
+//   - http://stackoverflow.com/a/3148441/147079
+function safeJSONStringify(obj) {
+  /* eslint no-extend-native:0 */
+
+  if (Array.prototype.toJSON === undefined) {
+    return JSON.stringify(obj);
+  }
+
+  var toJSON = Array.prototype.toJSON;
+  delete Array.prototype.toJSON;
+  var out = JSON.stringify(obj);
+  Array.prototype.toJSON = toJSON;
+
+  return out;
 }
